[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "paramclass-pyomo"
version = "0.1.0"
description = "Pyomo integration for paramclass."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["license.txt"]
dependencies = [
    "paramclass",
    "pyomo",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.uv.sources]
paramclass = { path = "../paramclass", editable = true }

[tool.setuptools.packages.find]
where = ["src"]
