[metadata]
name = paramclass-pyomo
version = 1.0.0
author = Philip Martin
author_email = philipscottmartin01@gmail.com
description = Automatically parameterized classes for pyomo.
long_description = file: README.md
long_description_content_type = text/markdown
url = about:blank
project_urls =
    Bug Tracker = about:blank
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.9
install_requires = requests

include_package_data = True

[options.packages.find]
where = src

[options.package_data]
# If any package or subpackage contains *.txt or *.rst files, include them:
* = *.sql, *.xlsx
